##########################
# Setup.py Configuration #
##########################
[metadata]
name = chemicalx
version = 0.0.8
description = A Deep Learning Library for Drug Pair Scoring
long_description = file: README.md
long_description_content_type = text/markdown

# Links
url = https://github.com/AstraZeneca/chemicalx
download_url = https://github.com/AstraZeneca/chemicalx/archive/v0.0.8.tar.gz
project_urls =
    Bug Tracker = https://github.com/AstraZeneca/chemicalx/issues


# Author information
author = Benedek Rozemberczki and Charles Tapley Hoyt
author_email = benedek.rozemberczki@gmail.com
maintainer = Benedek Rozemberczki
maintainer_email = benedek.rozemberczki@gmail.com

# License information
license = Apache-2.0
license_file = LICENSE

# Search tags
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    drug
    deep-learning
    deep-chemistry
    deep-ai
    torch-drug
    synergy-prediction
    synergy
    drug-combination
    deep-synergy
    drug-interaction
    chemistry
    pharma

[options]
install_requires =
    numpy
    torch>=1.10.0
    torchdrug
    torch-scatter>=2.0.8
    pandas<=1.3.5
    tqdm
    scikit-learn
    class-resolver>=0.2.1
    tabulate
    pystow
    pytdc

zip_safe = false
include_package_data = True
python_requires = >=3.7

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[options.extras_require]
tests =
    pytest
    pytest-cov
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-click
    sphinx-autodoc-typehints
    sphinx_automodapi
    nbsphinx_link
    jupyter-sphinx
