##########################
# Setup.py Configuration #
##########################
[metadata]
long_description = file: README.md
long_description_content_type = text/markdown

##########################
# Darglint Configuration #
##########################
[darglint]
docstring_style = sphinx
strictness = short
